Update and rename srr_prototype.html to prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-	<title>B1 SRR Masonry</title>
+	<title>Social Masonry</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Meta Tags -->
 	<!-- Mobile Device Meta -->
