--- a/prototype.html
+++ b/prototype.html
@@ -159,7 +159,7 @@
 					<p>Rachel Romano : 10/31/2017</p>
 					<a href="#"><img width="100" height="20" src="resources/images/review_03.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.<br>
-						<br> Lorem ipsum dolor sit amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum.<br><br>
+						<br> Lorem ipsum dolor seal amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum.<br><br>
 						<div class="style1">
 						</div>
 						<p>Flag Review</p>
