--- a/prototype.html
+++ b/prototype.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-	<title>Social Masonry</title>
+	<title>B1 SRR Masonry</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Meta Tags -->
 	<!-- Mobile Device Meta -->
@@ -55,7 +55,8 @@
 						<div class="clear"></div>
 					</div>
 					<div class="author-img">
-						<img alt="" src="resources/images/profile_pic_01.png" class="avatar avatar-50 photo" height="50" width="50"></div>
+						<img alt="" src="resources/images/profile_pic_01.png" class="avatar avatar-50 photo" height="50" width="50">
+					</div>
 					<p>Janet Doe : 10/31/2017</p>
 					<a href="#"><img width="100" height="20" src="resources/images/review_01.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.<br>
@@ -86,7 +87,8 @@
 						<div class="clear"></div>
 					</div>
 					<div class="author-img">
-						<img alt="" src="resources/images/profile_pic_02.png" class="avatar avatar-50 photo" height="50" width="50"></div>
+						<img alt="" src="resources/images/profile_pic_02.png" class="avatar avatar-50 photo" height="50" width="50">
+					</div>
 					<p>Ben Howdle : 10/31/2017</p>
 					<a href="#"><img width="100" height="20" src="resources/images/review_02.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.<br><br></p>
@@ -155,31 +157,32 @@
 						<div class="clear"></div>
 					</div>
 					<div class="author-img">
-						<img alt="" src="resources/images/profile_pic_03.png" class="avatar avatar-50 photo" height="50" width="50"></div>
+						<img alt="" src="resources/images/profile_pic_03.png" class="avatar avatar-50 photo" height="50" width="50">
+					</div>
 					<p>Rachel Romano : 10/31/2017</p>
 					<a href="#"><img width="100" height="20" src="resources/images/review_03.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.<br>
-						<br> Lorem ipsum dolor seal amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum.<br><br>
-						<div class="style1">
+						<br> Lorem ipsum dolor sit amet, consectetur piscing elit. Aliquam at porttitor sem. Aliquam eratl utpat. Donec placerat nisl magna, et faucibus arcu condimentum.<br><br>
+					<div class="style1">
+					</div>
+					<p>Flag Review</p>
+					<br>
+					<div>
+						<form class="predefined-comment-form">
+							<textarea class="textarea" placeholder="Enter your internal note here..."></textarea>
+						</form>
+					</div>
+					<div class="clear"></div>
+					<p>
+						<a href="#" target="_blank" class="simplebtn green3"> Submit</a>
+						<a href="#" target="_blank" class="simplebtn red2"> Cancel</a>
+						<a href="#" target="_blank" class="simplebtn"> Save</a>
+					</p>
+					<div class="sub-article">
+						<div class="an-display-comm"> <a href="#"> ••• More</a>
 						</div>
-						<p>Flag Review</p>
-						<br>
-						<div>
-							<form class="predefined-comment-form">
-								<textarea class="textarea" placeholder="Enter your internal note here..."></textarea>
-							</form>
-						</div>
-						<div class="clear"></div>
-						<p>
-							<a href="#" target="_blank" class="simplebtn green3"> Submit</a>
-							<a href="#" target="_blank" class="simplebtn red2"> Cancel</a>
-							<a href="#" target="_blank" class="simplebtn"> Save</a>
-						</p>
-						<div class="sub-article">
-							<div class="an-display-comm"> <a href="#"> ••• More</a>
-							</div>
-						</div>
-						<div class="clear"></div>
+					</div>
+					<div class="clear"></div>
 			</article>
 			<!-- End Tile Content -->
 
@@ -197,7 +200,8 @@
 						<div class="clear"></div>
 					</div>
 					<div class="author-img">
-						<img alt="" src="resources/images/profile_pic_04.png" class="avatar avatar-50 photo" height="50" width="50"></div>
+						<img alt="" src="resources/images/profile_pic_04.png" class="avatar avatar-50 photo" height="50" width="50">
+					</div>
 					<p>Jen Rothchild : 10/31/2017</p>
 					<a href="#"><img width="100" height="20" src="resources/images/review_01.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum nisl quis libero adipiscing, et tempor lorem ornare. Cras turpis .. <br>
@@ -230,7 +234,8 @@
 						<div class="clear"></div>
 					</div>
 					<div class="author-img">
-						<img alt="" src="resources/images/profile_pic_01.png" class="avatar avatar-50 photo" height="50" width="50"></div>
+						<img alt="" src="resources/images/profile_pic_01.png" class="avatar avatar-50 photo" height="50" width="50">
+					</div>
 					<p>Janet Doe : 10/31/2017</p>
 					<a href="#"><img width="100" height="20" src="resources/images/review_03.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum nisl quis libero adipiscing, et tempor lorem ornare. Cras turpis .. <br><br>
@@ -259,7 +264,8 @@
 						<div class="clear"></div>
 					</div>
 					<div class="author-img">
-						<img alt="" src="resources/images/profile_pic_02.png" class="avatar avatar-50 photo" height="50" width="50"></div>
+						<img alt="" src="resources/images/profile_pic_02.png" class="avatar avatar-50 photo" height="50" width="50">
+					</div>
 					<p>Ben Howdle : 10/31/2017</p>
 					<a href="#"><img width="100" height="21" src="resources/images/review_04.png"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum nisl quis libero adipiscing, et tempor lorem ornare. Cras turpis .. <br><br>
